Fixing sidebar button z-index

--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -45,7 +45,7 @@
 
 
 .coolbtn{
-
+  z-index: 99999;
     display: flex;
     margin-top: 2%;
     margin-left: 1%;
